Route entre Loading et Menu OK
- Création du dossier feature pour toutes nos features (et donc déplacement de loading dedans)
- Création de la feature "menu"

- Pour la création d'une route,
- Pour la création d'une route, dans la feature de départ, penser à ajouter "RouterModule" dans le champ "imports" de @Component

--- a/frontend/src/app/features/landing/landing.component.html
+++ b/frontend/src/app/features/landing/landing.component.html
@@ -2,7 +2,7 @@
 <div class="landing-container">
     <header>
       <h1>Bienvenue sur APIZZAPP</h1>
-      <p>I migliori pizzaioli di Corsica. S'elli ùn ci crede, semu pronti à scatenà a vostra casa.</p>
+      <p>I gliori pizzaioli di Corsica. S'elli ùn ci crede, semu pronti à scatenà a vostra casa.</p>
     </header>
     <section class="cta">
       <button routerLink="/menu" class="btn btn-primary">Découvrir le Menu</button>
