DB gérer par flyway (hibernate off)
V1 pour la structure, V2 pour peupler

--- a/frontend/src/app/features/menu/menu.component.html
+++ b/frontend/src/app/features/menu/menu.component.html
@@ -1,7 +1,7 @@
 <h2>Notre Menu</h2>
-  <div *ngFor="let pizza of pizzas" class="pizza-item">
-    <!-- <img [src]="pizza.imageUrl || 'assets/images/default-pizza.png'" [alt]="pizza.name" class="pizza-image"> -->
-    <h3>{{ pizza.name }}</h3>
-    <!-- <p>{{ pizza.description }}</p>
-    <p>Prix : {{ pizza.basePrice | currency:'EUR' }}</p> -->
-    </div>
+<div *ngFor="let pizza of pizzas" class="pizza-item">
+  <img [src]="pizza.imageUrl || 'assets/images/default-pizza.png'" [alt]="pizza.name" class="pizza-image">
+  <h3>{{ pizza.name }}</h3>
+  <p>{{ pizza.description }}</p>
+  <p>Prix : {{ pizza.basePrice | currency:'EUR' }}</p>
+</div>
