--- a/frontend/src/app/features/landing/landing.component.html
+++ b/frontend/src/app/features/landing/landing.component.html
@@ -1,8 +1,8 @@
 <!-- src/app/landing/landing.component.html -->
 <div class="landing-container">
     <header>
-      <h1>Bienvenue sur APIZZAPP</h1>
-      <p>I gliori pizzaioli di Corsica. S'elli ùn ci crede, semu pronti à scatenà a vostra casa.</p>
+      <h1>Bienvenue sur A PIZZ'APP</h1>
+      <p>I migliori pizzaioli di Corsica. S'elli ùn ci crede, semu pronti à scatenà a vostra casa.</p>
     </header>
     <section class="cta">
       <button routerLink="/menu" class="btn btn-primary">Découvrir le Menu</button>
