--- a/frontend/src/app/features/register/register.component.css
+++ b/frontend/src/app/features/register/register.component.css
@@ -57,7 +57,7 @@ button[type="submit"]:hover {
 /* Message de retour */
 .message {
   margin-top: 1rem;
-  color: #28a745;
+  color: red;
   font-size: 1rem;
   text-align: center;
 }
