--- a/frontend/src/app/features/menu/menu.component.html
+++ b/frontend/src/app/features/menu/menu.component.html
@@ -1,7 +1,16 @@
-<h2>Notre Menu</h2>
-<div *ngFor="let pizza of pizzas" class="pizza-item">
-  <img [src]="pizza.imageUrl || 'assets/images/default-pizza.png'" [alt]="pizza.name" class="pizza-image">
-  <h3>{{ pizza.name }}</h3>
-  <p>{{ pizza.description }}</p>
-  <p>Prix : {{ pizza.basePrice | currency:'EUR' }}</p>
-</div>
+
+  <div class="container mt-4">
+    <h1 class="text-center mb-4">Choisissez une pizza</h1>
+
+    <div class="row">
+      <div *ngFor="let pizza of pizzas" class="col-md-3 col-sm-6 mb-4">
+        <div class="card pizza-card" (click)="onPizzaSelected(pizza)" data-pizza="pizza.name">
+          <img  [src]="pizza.imageUrl || 'assets/images/default-pizza.png'" [alt]="pizza.name" class="card-img-top" >
+          <div class="card-body">
+            <h5 class="card-title text-center"> {{pizza.name}} </h5>
+            <p class="card-text text-center"> {{pizza.description}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
