Feature Backend compte mais bug

--- a/frontend/src/app/features/landing/landing.component.html
+++ b/frontend/src/app/features/landing/landing.component.html
@@ -8,7 +8,7 @@
   <!-- Formulaire de connexion -->
   <section class="login-form">
     <form [formGroup]="loginForm">
-      <input formControlName="username" placeholder="Nom d'utilisateur" />
+      <input formControlName="email" placeholder="Email" />
       <input type="password" formControlName="password" placeholder="Mot de passe" />
       <button type="submit">Se connecter</button>
     </form>
