--- a/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
+++ b/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
@@ -5,9 +5,13 @@
 
   <div class="row mb-4">
     <!-- Pizza selectionnée -->
-    <div class="col-3  text-center card">
-        <h2>{{ pizza?.name }}</h2>
-        <img  [src]="pizza?.imageUrl" [alt]="pizza?.name">
+    <div class="col-3  text-center card order-card">
+      <h2>{{ pizza?.name }}</h2>
+      <img  [src]="pizza?.imageUrl" [alt]="pizza?.name">
+    </div>
+
+    <div class="col-9">
+      
     </div>
         
     <!-- Choix des sauces -->
