--- a/frontend/src/app/features/landing/landing.component.html
+++ b/frontend/src/app/features/landing/landing.component.html
@@ -1,4 +1,4 @@
-<!-- src/app/landing/landing.component.html -->
+<!-- landing.component.html -->
 <div class="landing-container">
   <header>
     <h1>Bienvenue sur A PIZZ'APP</h1>
@@ -6,12 +6,46 @@
   </header>
 
   <!-- Formulaire de connexion -->
-  <section class="login-form" >
+  <section class="login-form">
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-      <input type='email' formControlName="email" [(ngModel)]="email" name="email" placeholder="Email" required />
-      <input type="password" formControlName="password" [(ngModel)]="password" name="password" placeholder="Password" required />
+      <input
+        type="email"
+        formControlName="email"
+        [(ngModel)]="email"
+        name="email"
+        placeholder="Email"
+        required
+      />
+
+      <div class="password-wrapper">
+        <input
+          [type]="showPassword ? 'text' : 'password'"
+          formControlName="password"
+          [(ngModel)]="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+        <button
+          type="button"
+          class="eye-toggle"
+          (click)="togglePasswordVisibility()"
+        >
+         <img
+            [src]="'/images/icons/' + (showPassword
+              ? 'eye-slash-solid.svg'
+              : 'eye-solid.svg')"
+            alt="{{ showPassword
+              ? 'Masquer le mot de passe'
+              : 'Afficher le mot de passe' }}"
+            class="eye-icon"
+          />
+        </button>
+      </div>
+
       <button type="submit">Se connecter</button>
     </form>
+
     <div *ngIf="error" class="error">{{ error }}</div>
 
     <!-- Lien pour créer un compte -->
@@ -22,15 +56,20 @@
 
     <!-- Bouton pour les invités -->
     <div class="guest-access">
-      <p> Ou alors tout simplement !</p>
-      <button (click)="goToMenu()">Voir le menu</button>
+      <p>Ou alors tout simplement !</p>
+      <button class="guest-btn" (click)="goToMenu()">Voir le menu</button>
     </div>
   </section>
 
   <!-- Pizza's Scroller -->
   <div class="pizza-scroller">
     <div class="pizza-container">
-      <img *ngFor="let pizza of duplicatedPizzas" [src]="pizza.imgUrl" [alt]="pizza.name" class="pizza" />
+      <img
+        *ngFor="let pizza of duplicatedPizzas"
+        [src]="pizza.imgUrl"
+        [alt]="pizza.name"
+        class="pizza"
+      />
     </div>
   </div>
 
