affichage du panier fonctionnel

--- a/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
+++ b/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
@@ -56,8 +56,8 @@
 
   <!-- Ingredients de la pizza -->
   <div class="row" id="ingredients-container">
-    <div *ngFor="let ingredient of pizza?.baseIngredients; let i = index" class="col-md-3 col-sm-6 mb-4">
-      <div class="card"  [ngClass]="{ 'card-deplement': disabledIngredients.has(i) }" (click)="toggleIngredient(i)">
+    <div *ngFor="let ingredient of pizza?.baseIngredients" class="col-md-3 col-sm-6 mb-4">
+      <div class="card"  [ngClass]="{ 'card-deplement': disabledIngredients.has(ingredient.id) }" (click)="toggleIngredient(ingredient.id)">
         <img [src]="ingredient.imageUrl" [alt]="ingredient.name" class="card-img-top" >
         <div class="card-body">
           <h5 class="card-title text-center">{{ ingredient.name }}</h5>
@@ -76,7 +76,7 @@
 
   <!-- Bouton valider -->
   <div class="text-center mt-4">
-    <a class='btn btn-primary' (click)="validateItem()">Ajouter cette pizza</a>
+    <a class='btn btn-primary' (click)="addToCart()">Ajouter cette pizza</a>
   </div>
 
 
