--- a/frontend/src/app/features/menu/recap-commande/recap-commande.component.html
+++ b/frontend/src/app/features/menu/recap-commande/recap-commande.component.html
@@ -1,27 +1,21 @@
 <div class="container mt-4">
     <h1 class="text-center mb-4">Recapitulatif de la commande</h1>
 
-    <!-- <div class="row">
-        {% for pizza in order %}
-        <div class="card order-card col-md-3">
+    <div class="row">
+        <div *ngFor="let item of cartItems" class="card order-card col-md-3">
             <div class="quantity-controls">
-            <button  onclick="tryDecQuantity('{{loop.index0}}', '{{pizza.quantity}}')">-</button>
-            <button onclick="incQuantity('{{loop.index0}}', '{{pizza.quantity}}')">+</button>
+            <!-- <button  onclick="tryDecQuantity('{{loop.index0}}', '{{pizza.quantity}}')">-</button>
+            <button onclick="incQuantity('{{loop.index0}}', '{{pizza.quantity}}')">+</button> -->
             </div>
-            <img src="{{ url_for('static', filename='images/' ~ pizzas[pizza.name].image) }}" class="card-img-top ">
+            <img [src]="item.pizza.imageUrl" class="card-img-top ">
             <div class="card-body">
-            <h4 class="card-title text-center"> {{ pizza.quantity }} {{pizza.size}} {{ pizza.name }} {{ pizza.sauce }}</h4>
-            {% for supplement in pizza.supplements %}
-            <span class="badge badge-success">{{ supplement }} </span>
-            {% endfor %}
-            {% for deplement in pizza.deplements %}
-            
-            <span class="badge badge-danger">{{ deplement }} </span>
-            {% endfor %}
+            <!-- <h4 class="card-title text-center"> {{ item.quantity }} {{ item.size }} {{ item.name }} {{ item.sauce }}</h4> -->
+            <h4 class="card-title text-center"> {{ item.pizza.name }}</h4>
+            <span *ngFor="let supplement of item.addedSupplements" class="">{{ supplement.name }} </span>
+            <span *ngFor="let depplement of item.removedIngredients" class="">{{ depplement.name }} </span>
             </div>
         </div>
-        {% endfor %}
-    </div> -->
+    </div>
 </div>
 <!-- <a href="/choose_pizza" class="btn btn-primary text-center mt-4">Ajouter une pizza</a> -->
 <!-- <form method="POST" class="mt-4">
