--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -332,7 +332,7 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-user-status></app-user-status>
 <router-outlet></router-outlet>
 
 <!-- AVANT : <router-outlet /> -->
