Menu sur tout  les comptes et redirection dashboard

--- a/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
@@ -17,6 +17,13 @@
           Gérer les ingrédients
         </button>
       </section>
+
+      <section class="dashboard-section">
+        <p>Accéder au menu :</p>
+        <button routerLink="/menu" class="btn">
+          Menu
+        </button>
+      </section>
     </div>
   </div>
 </div>
