--- a/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
@@ -29,6 +29,13 @@
           Réglages généraux
         </button>
       </section>
+
+      <section class="dashboard-section">
+        <p>Accéder au menu :</p>
+        <button routerLink="/menu" class="btn">
+          Menu
+        </button>
+      </section>
     </div>
   </div>
 </div>
