Ajout gestion des stocks + mise a jour du menu et ingredients
Ajout gestion des stocks + mise a jour du menu et ingredients

--- a/frontend/src/app/features/menu/detail-produit/detail-produit.component.css
+++ b/frontend/src/app/features/menu/detail-produit/detail-produit.component.css
@@ -96,3 +96,13 @@ body {
   border-color: black;
   background-color: #0056b3;
 }
+
+.supplement-card.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  filter: grayscale(100%);
+}
+
+.supplement-card.disabled:hover {
+  transform: none;
+}
