--- a/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
+++ b/frontend/src/app/features/menu/detail-produit/detail-produit.component.html
@@ -84,8 +84,10 @@
   <h1>Supplements</h1>
   <div class="row">
     <div *ngFor="let supplement of ingredients" class="col-md-3 col-sm-6 mb-4">
-      <div class="card supplement-card" (click)="addSupplement(supplement)">
-        <img [src]="supplement.imageUrl" [alt]="supplement.name" class="card-img-top" >
+      <div class="card supplement-card" 
+           [ngClass]="{'disabled': !supplement.availableAsSupplement}"
+           (click)="supplement.availableAsSupplement && addSupplement(supplement)">
+        <img [src]="supplement.imageUrl" [alt]="supplement.name" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title text-center">{{ supplement.name }}</h5>
         </div>
