Commande Guest fonctionnelle
Possibilité de passer une commande sans créer de compte en renseignant son nom et prénom à la fin de la commande.
Les noms et prénoms s'affichent bien dans le planning suivi de la mention "(Invité)"

--- a/frontend/src/app/features/menu/recap-commande/recap-commande.component.html
+++ b/frontend/src/app/features/menu/recap-commande/recap-commande.component.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="mb-3">
-            <label for="scheduledTime" class="form-label">Heure de retrait/livraison<span class="text-danger">*</span>:</label>
+            <label for="scheduledTime" class="form-label">Heure de retrait<span class="text-danger">*</span>:</label>
             <select id="scheduledTime" formControlName="scheduledTime" class="form-select"
                     [ngClass]="{ 'is-invalid': formControls['scheduledTime'].touched && formControls['scheduledTime'].errors }">
                 <option value="" disabled>Choisissez un créneau</option>
